# worldmaker

./: .gitignore  LICENSE  README.md  blender_importscript292.py  pipeline_common.py  pipeline_world.py  pyproject.toml  requirements.txt  worldmaker.py  worldmaker_execstep.py
outputs/: heightmap_ply.py
world_defs/: new2021.yml  waldshut.yml
worldgenlib/: perlin.py  terrain_gen.py  water.py
